commodities completed
